--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,11 +29,11 @@
 
                 <%- include('partials/logo') %> 
 
-                <div class="loginButtons d-grid gap-2 col-md-6 mx-auto gap-md-3">
+                <!-- <div class="loginButtons d-grid gap-2 col-md-6 mx-auto gap-md-3">
                     <button type="button" class="btn btn-primary">Login with Twitter</button>
                     <button type="button" class="btn btn-secondary">Login with Google</button>
-                </div>
-                <p class="orText m-2">or</p>
+                </div> -->
+                <!-- <p class="orText m-2">or</p> -->
                 <form action="/" method="POST" class="d-grid gap-2 col-md-6 mx-auto gap-md-2">
                         <input type="text" name="username" id="username" placeholder="Username">
                         <input type="password" name="password" id="password" placeholder="Password">
