--- a/views/partials/logo.ejs
+++ b/views/partials/logo.ejs
@@ -1,7 +1,9 @@
 <div class="container onlyLogo mt-4 mt-md-5">
-    <h1>
-        <span><i class="fas fa-paw"></i></span>
-        <span class="latoOnly">only</span>
-        <span class="windSongPets">Pets</span>
-    </h1>
+    <a href="/home" class="onlyLogoStyle">
+        <h1>
+            <span><i class="fas fa-paw"></i></span>
+            <span class="latoOnly">only</span>
+            <span class="windSongPets">Pets</span>
+        </h1>
+    </a>
 </div>
