--- a/views/partials/navbottom.ejs
+++ b/views/partials/navbottom.ejs
@@ -25,9 +25,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/home">Home</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link disabled" href="/notifications">Notifications</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
                         <a class="nav-link" href="/followers">Followers</a>
                     </li>
