--- a/views/partials/navtop.ejs
+++ b/views/partials/navtop.ejs
@@ -15,9 +15,9 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="/home">Home</a>
                                 </li>
-                                <li class="nav-item">
+                                <!-- <li class="nav-item">
                                     <a class="nav-link disabled" href="/notifications">Notifications</a>
-                                </li>
+                                </li> -->
                                 <li class="nav-item">
                                     <a class="nav-link" href="/followers">Followers</a>
                                 </li>
